Added mail; refactoring